# agentcoffeechat

./: .gitignore  DEVELOPMENT.md  INSTALL.md  LICENSE  install-dev.sh  install.sh
Formula/: agentcoffeechat.rb
scripts/: release.sh
src/: Cargo.toml
src/agentcoffeechat-cli/: Cargo.toml
src/agentcoffeechat-cli/src/: chat_ui.rs  main.rs
src/agentcoffeechat-core/: Cargo.toml
src/agentcoffeechat-core/src/: doctor.rs  identity.rs  ipc.rs  lib.rs  plugin.rs  sanitize.rs  types.rs  wordcode.rs
src/agentcoffeechat-daemon/: Cargo.toml
src/agentcoffeechat-daemon/src/: ask_engine.rs  auth.rs  awdl.rs  chat_engine.rs  chat_history.rs  discovery.rs  lib.rs  main.rs  session_manager.rs  transport.rs
src/agentcoffeechat-daemon/tests/: integration.rs  loopback_test.rs
src/agentcoffeechat-menubar/: Cargo.toml
src/agentcoffeechat-menubar/src/: main.rs
