[package]
name = "agentcoffeechat-core"
version = "0.1.0"
edition = "2021"
description = "AgentCoffeeChat Core — shared types, sanitization pipeline, and utilities"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
libc = "0.2"
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
security-framework = "2"
sha2 = "0.10"
base64 = "0.22"
