[package]
name = "agentcoffeechat-daemon"
version = "0.1.0"
edition = "2021"
description = "AgentCoffeeChat Daemon — background service for discovery, transport, and chat sessions"

[lib]
name = "agentcoffeechat_daemon"
path = "src/lib.rs"

[[bin]]
name = "agentcoffeechat-daemon"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quinn = "0.11"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
btleplug = "0.11"
mdns-sd = "0.11"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
uuid = "1"
futures = "0.3"
agentcoffeechat-core = { path = "../agentcoffeechat-core" }
